# chess

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  application.cpp  application.hpp  board-shader.frag  board-shader.vert  board.cpp  board.hpp  button-manager.hpp  game-scene.cpp  game-scene.hpp  main.cpp  menu-scene.cpp  menu-scene.hpp  move-checker.cpp  move-checker.hpp  option-loader.cpp  option-loader.hpp  options.txt  piece-manager.cpp  piece-manager.hpp  piece-position.hpp  piece-shader.frag  piece.hpp  pieces.cpp  pieces.hpp  renderer-shader.frag  renderer-shader.vert  renderer.cpp  renderer.hpp  scene-manager.hpp  scene.hpp  shaders.cpp  shaders.hpp  stb-image.c  utilities.cpp  utilities.hpp  window.cpp  (+1 more)
.github/workflows/: build.yml
